@@ -346,7 +346,7 @@
     }
   [service setURL:url];
   
-  //  [service setDebug:YES];
+  //[service setDebug:YES];
 
   /* prepare the parameters */
   loginParmDict = [NSMutableDictionary dictionaryWithCapacity: 3];
@@ -1420,6 +1420,7 @@
     id                  result;
     NSDictionary        *queryFault;
     NSDictionary        *queryError;
+    NSMutableArray      *fieldsToNullArr;
 
     sObj = [NSMutableDictionary dictionaryWithCapacity: 2];
     [sObj setObject: @"urn:partner.soap.sforce.com" forKey: GWSSOAPNamespaceURIKey];
@@ -1432,19 +1433,44 @@
     [sObj setObject: sObjType forKey:@"type"];
     [sObjKeyOrder addObject:@"type"];
 
+    /* now we separate fields into two categories:
+       - fields with empty strings are considered NULL
+       - fields with a value are considered to update */
     fieldNames = [sObject fieldNames];
     fieldCount = [fieldNames count];
-
+    fieldsToNullArr = [[NSMutableArray alloc] init];
+    
     for (i = 0; i < fieldCount; i++)
       {
 	NSString *keyName;
+        NSString *fieldValue;
 
 	keyName = [fieldNames objectAtIndex:i];
-	[sObj setObject: [sObject valueForField:keyName] forKey:keyName];
-	[sObjKeyOrder addObject:keyName];
+        fieldValue = [sObject valueForField:keyName];
+        if ([fieldValue length])
+          {
+            [sObj setObject:fieldValue forKey:keyName];
+            [sObjKeyOrder addObject:keyName];
+          }
+        else
+          {
+            [fieldsToNullArr addObject:keyName];
+          }
       }
     [sObj setObject: sObjKeyOrder forKey: GWSOrderKey];
     [queryObjectsArray addObject: sObj];
+
+    NSLog(@"Fields to null: %@", fieldsToNullArr);
+    if ([fieldsToNullArr count])
+      {
+        NSMutableDictionary *sObjNillablesList;
+
+        sObjNillablesList = [NSDictionary dictionaryWithObjectsAndKeys: fieldsToNullArr, GWSSOAPValueKey, nil];      
+        [sObj setObject:sObjNillablesList forKey: @"fieldsToNull"];
+        [sObjKeyOrder addObject:@"fieldsToNull"];
+      }
+    [fieldsToNullArr release];
+    
 //    NSLog(@"total counter = %lu of %lu", totalCounter, [objects count]);
     if (batchCounter == upBatchSize-1 || totalCounter == [objects count]-1)
       {
@@ -1740,7 +1766,7 @@
 /** Force an udpate to the currently stored object  list */
 - (void)_updateObjects
 {
-  unsigned i;
+  NSUInteger i;
   
   [sObjectList release];
   sObjectList = [[self _describeGlobal] retain];
